--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "api-devbills",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "dist/server.js",
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/server.ts",
@@ -13,10 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^11.1.0",
     "@prisma/client": "^6.14.0",
     "dayjs": "^1.11.13",
     "dotenv": "^17.2.1",
     "fastify": "^5.5.0",
+    "firebase": "^12.3.0",
+    "firebase-admin": "^13.5.0",
     "mongodb": "^6.18.0",
     "zod": "^3.25.76",
     "zod-to-json-schema": "^3.24.6"
